# libhy_hal-bak

./: .gitignore  Makefile.am  README.md  autogen.sh  build.sh  build_linux.sh  build_rtt.sh  config.h.in  configure.ac  cross_build.sh  libhy_hal.pc.in  package-lock.json  package.json
3rd_lib/: Makefile.am
build-aux/: generate-version.sh
doc/: Makefile.am
example/: Makefile.am  audio.c  demo.c  dl_lib  dl_lib.c  file.c  hy_mcu_time_demo.c  hy_protobuf-c_demo.c  hy_socket_demo.c  hy_socket_test.c  hy_template.c  hy_time_demo.c  hy_time_test.c  hy_uart_demo.c  log.c  main.c  makefile  mutex.c  producer_comsumer.c  test.c  thread.c
include/: Makefile.am  demo.h  hal_assert.h  hal_audio_recorder.h  hal_audio_recorder_internal.h  hal_cond.h  hal_config.h  hal_dl_lib.h  hal_file.h  hal_linux_audio.h  hal_log.h  hal_mem.h  hal_module_cb.h  hal_mutex.h  hal_pthread.h  hal_sem.h  hal_string.h  hal_thread.h  hal_thread_internal.h  hal_time.h  hal_type.h  hy_adc.h  hy_compile.h  hy_error.h  hy_file.h  hy_gpio.h  hy_gpio_int.h  hy_key.h  hy_log.h  hy_mem.h  hy_socket.h  hy_string.h  hy_system.h  hy_time.h  hy_timer.h  hy_type.h  hy_uart.h  hy_utils.h  inside_gpio.h  inside_time.h  (+5 more)
include/linux/: hal_linux_audio.h  hal_linux_thread.h
include/rtos/: rtconfig.h
include/rtos/include/: rtdef.h
include/rtt/: hal_rtt_thread.h
include/wrapper/: Makefile.am  hy_mem_wrapper.h  hy_socket_wrapper.h  hy_time_wrapper.h  socket.h  socket_wrapper.h  time.h  time_wrapper.h  uart.h  uart_wrapper.h
m4/: check_libhy_mcu.m4  check_libhy_utils.m4  select_mcu.m4  select_os.m4
res/: Makefile.am
res/config/: log4cplus.rc
res/script/: batch_modify_file.sh
src/: Makefile.am  demo.c  hal_assert.c  hal_audio_recorder.c  hal_cond.c  hal_dl_lib.c  hal_file.c  hal_log.c  hal_mem.c  hal_mutex.c  hal_sem.c  hal_string.c  hal_thread.c  hal_time.c  hy_log.c  hy_mem.c  hy_socket.c  hy_time.c  hy_uart.c  module_a.c  my_print.c
src/linux/: Makefile.am  hal_linux_audio.c  hal_linux_thread.c  hal_pthread.c  hy_file.c  hy_mem_linux.c  hy_signal.c  hy_socket.c  hy_socket_linux.c  hy_time.c  hy_time_linux.c  hy_uart.c  hy_utils.c  socket.c  socket_wrapper.c  time.c  time_wrapper.c  uart.c  uart_wrapper.c
src/mcu/: Makefile.am  hy_adc.c  hy_gpio.c  hy_gpio_int.c  hy_key.c  hy_system.c  hy_time.c  hy_timer.c  hy_uart.c  socket.c  socket_wrapper.c  time.c  time_wrapper.c  uart.c  uart_wrapper.c
src/mcu/at/: Makefile.am
src/mcu/at/at32f4xx/: Makefile.am
src/mcu/at32f4xx/: Makefile.am  hy_gpio.c  hy_system.c  hy_time.c  hy_uart.c
src/mcu/hc/: Makefile.am
src/mcu/hc/hc32f003/: Makefile.am  hy_gpio.c  hy_system.c  hy_time.c  hy_uart.c
src/mcu/hc/hc32l13x/: Makefile.am  hy_adc.c  hy_system.c
src/mcu/hc32f003/: Makefile.am
src/mcu/hc32l13x/: Makefile.am  hy_gpio.c  hy_gpio_int.c  hy_system.c  hy_time.c  hy_uart.c
src/rtos/: Makefile.am
src/rtos/rtt/: hy_mem_rtt.c
src/rtt/: Makefile.am  hal_rtt_thread.c  hy_time.c
src/window/: Makefile.am
