# ===============================================================
# 
# Release under GPLv-3.0.
# 
# @file    Makefile.am
# @brief   
# @author  gnsyxiang <gnsyxiang@163.com>
# @date    30/06 2021 17:03
# @version v0.0.1
# 
# @since    note
# @note     note
# 
#     change log:
#     NO.     Author              Date            Modified
#     00      zhenquan.qiu        30/06 2021      create the file
# 
#     last modified: 30/06 2021 17:03
# ===============================================================

NO_INSTALL_HEADERS_COM  =
INSTALL_HEADERS_COM     =
install_includedir      = $(includedir)/@project_name@

# ----------------------------------------------------
NO_INSTALL_HEADERS_COM  += \
                           hy_socket_wrapper.h \
                           hy_time_wrapper.h \
                           hy_mem_wrapper.h

INSTALL_HEADERS_COM     +=

noinst_HEADERS          = $(NO_INSTALL_HEADERS_COM)
install_include_HEADERS = $(INSTALL_HEADERS_COM)

